# Tadabbur

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: health.py  sessions.py
backend/app/broadcast/: redis_pubsub.py
backend/app/models/: contract.py
backend/app/pipeline/: session.py
backend/app/pipeline/asr/: base.py  speechmatics.py
backend/app/pipeline/translation/: base.py  deepl.py  google.py
backend/app/ws/: audio_in.py  captions_out.py
backend/tests/: test_placeholder.py
frontend/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx
frontend/app/(control)/: page.tsx
frontend/app/(display)/: layout.tsx
frontend/app/(display)/display/[sessionId]/: page.tsx
frontend/components/: CaptionRenderer.tsx
frontend/lib/: ws-client.ts
frontend/types/: contract.ts
shared/contract/: README.md  index.ts
