[project]
name = "tadabbur-backend"
version = "0.1.0"
description = "Tadabbur backend: audio ingest, ASR/translation pipeline, Redis fan-out."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    # Vendor SDKs live behind provider interfaces (see CLAUDE.md §7).
    "speechmatics-python>=3.0",
    "deepl>=1.20",
    "google-cloud-translate>=3.16",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
